changes font-wght, fixes alignment

--- a/src/Components/Description.css
+++ b/src/Components/Description.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Righteous&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
 
 .rectangle {
     position: absolute;
@@ -30,7 +30,7 @@
     word-wrap: break-word;
     position: relative;
     top: 15%;
-    left: 1%;
+    left: 2%;
 }
 
 .txt-jssstu {
@@ -61,9 +61,8 @@
     bottom: 0;
 
     font-family: "Josefin Sans", sans-serif;
-    font-style: medium;
-    font-weight: 500;
-    font-size: 1.3rem;
+    font-weight: 600;
+    font-size: 1.4rem;
     line-height: 2.1875rem;
     letter-spacing: 0.0625rem;
 
